vehicle/tests/golden/error/externalError/syntax/syntaxError.vcl
@network
f : Tensor Real [1] -> Tensor Real [1]

@property
trivial : Bool
trivial = f [0] ! 0 >
